[project]
name = "test_tu"
authors = [
    { name = "HKuz", email = "heather.kusmierz@gmail.com"}
]
description = "Dummy ERPNext app to test Test Utils functionality"
python = ">=3.10,<3.14"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "test_utils @ git+https://github.com/hkuz/test_utils.git@py13_support",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
